styles fixes: - 50% width of col-xs-12 only in isotope - spacing between letters in slide headers

--- a/less/styles.less
+++ b/less/styles.less
@@ -142,10 +142,12 @@ i {
 
 @media (max-width: 699px) {
   .slide-content h1 {
-	font-size: 1em;
+	font-size: 50px;
+    letter-spacing: -2px;
   }
   .slide-content h2 {
-	font-size: 1em;
+	font-size: 20px;
+    letter-spacing: 0;
   }
 
   .quotation {
@@ -155,7 +157,7 @@ i {
 }
 
 @media (min-width: 630px) and (max-width: 767px) {
-  .col-xs-12 {
+  #isotope .col-xs-12 {
     width: 50%;
   }
 }
